@@ -1,5 +1,8 @@
 2010-01-21  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
+	* tag V01-03-02
+	* fix ConfigurationModifier to properly handle blocks again
+
 	* tag V01-03-01
 	* temporary fix to HtmlOutputWriter by Ulf
 	* fix OnlineConverter: properly set the path to be an endpath, as
